--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,30 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  padding: 5px;
+  margin: auto;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 5px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 14px 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
   background: white;
+  display: block;
   border: 1px solid #eee;
+  padding: 10px 24px;
+  margin: auto;
 }
